added blog config file[#151970511]

--- a/profiles/firstblog/config/install/field.storage.node.field_comments.yml
+++ b/profiles/firstblog/config/install/field.storage.node.field_comments.yml
@@ -2,17 +2,17 @@ langcode: en
 status: true
 dependencies:
   module:
+    - comment
     - node
-    - taxonomy
-id: node.field_blog_tags
-field_name: field_blog_tags
+id: node.field_comments
+field_name: field_comments
 entity_type: node
-type: entity_reference
+type: comment
 settings:
-  target_type: taxonomy_term
-module: core
+  comment_type: comment
+module: comment
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
